update index + main to show correct spacing and basic color changes + readme

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 		padding: 0 0.8rem;
 	}
 
-	.wi {
+	.forecast-img, #weather-img, #wind-img, #humid-img {
 		font-size: 2.25rem;
 	}
 
@@ -35,7 +35,7 @@
 		padding: 0 0.8rem;
 	}
 
-	.wi {
+	.forecast-img, #weather-img, #wind-img, #humid-img {
 		font-size: 2.25rem;
 	}
 
@@ -69,7 +69,7 @@
 		padding: 0 1rem;
 	}
 
-	.wi {
+	.forecast-img, #weather-img, #wind-img, #humid-img {
 		font-size: 2.5rem;
 	}
 
@@ -97,6 +97,12 @@
 	}
 }
 
+/*** Mobile title bar ***/
+.title-bar {
+	background: #e6e6e6;
+	color: #2199e8;
+}
+
 /* Allows Weather bar sits on top of map, 
 	Still allows for maps funcationality */
 
@@ -112,10 +118,22 @@
 	width: 100%;
 }
 
+/*** Forecast weather ***/
+
 .forecast-color {
 	color: #2199e8;
 	background-color: #e6e6e6;
 }
+
+.forecast-high {
+	color: red;
+}
+
+.forecast-temp, .pop-qpf {
+	margin-bottom: 0;
+	font-size: 1.25rem;
+}
+
 
 /*** Update Weather button ***/
 
